# spmaker

./: .gitignore  ALL_BUILD.vcxproj  BUILD_LIBRARIES_LINUX.md  BUILD_LIBRARIES_WIN.md  CMakeLists.txt  INSTALL.vcxproj  README.md  ZERO_CHECK.vcxproj  spmaker.sln
app/: CMakeLists.txt  INSTALL.vcxproj  main.cpp  spmaker.vcxproj
app/configs/: connector.config
connectors/: ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  binance.sln  binance.vcxproj  connector.cmake
connectors/RelWithDebInfo/: binance.exp
connectors/binance/: Binance.cpp  Binance.h
connectors/bybit/: Bybit.cpp  Bybit.h
public/: AuthUtils.h  ConnHandler.h  ExecutionManager.h  G3LogCustomSink.h  IExchange.h  JsonHelper.h  LogHelper.h  ModuleLoader.h  ModuleUtils.h  SpinLock.h  TradeStatistics.h  Utils.h
public/datamodels/: BalanceData.h  CandleData.h  ExchangeData.h  InstrumentFilter.h  OrderData.h  PortfolioData.h  PositionData.h  PriceData.h  StrategyData.h  TickerData.h
